# calm

./: .calm.yml.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOWNLOAD_TRACKING.md  IMPLEMENTATION_SUMMARY.md  KNOWN_ISSUES.md  MULTI_WINDOW_IMPLEMENTATION.md  PERFORMANCE.md  PRIVACY.md  README.md  SPLIT_VIEW_IMPLEMENTATION.md  TODO.md  install.sh
.github/workflows/: build.yml
src/: config.rs  debug.rs  history.rs  main.rs  main_old.rs  performance.rs  session.rs  single_instance.rs  url_cleaner.rs  vim_scroll.rs  vimium_hints.rs
src/downloads/: mod.rs
src/errors/: mod.rs
src/ipc/: protocol.rs
src/privacy/: mod.rs
src/privacy/scripts/: adblock.rs  context_menu.rs  core.rs  download_intercept.rs  fingerprint.rs  link_handler.rs  mod.rs  title_tracker.rs  tracking.rs
src/shortcuts/: handler.rs  mod.rs  parser.rs
src/tabs/: manager.rs  mod.rs  split_view.rs  tab.rs
src/ui/: keyboard_handler.rs  mod.rs  overlay.rs  settings.rs  welcome.html  welcome.rs
src/ui/animations/: interactions.rs  loader.rs  mod.rs  transitions.rs
src/ui/command_prompt/: html.rs  mod.rs  script.rs  styles.rs
src/ui/download_overlay/: html.rs  mod.rs  script.rs  styles.rs
src/ui/fonts/: mod.rs
src/ui/renderers/: content.rs  mod.rs
src/ui/sounds/: mod.rs
src/ui/tab_bar/: html.rs  mod.rs  script.rs  styles.rs
src/updater/: mod.rs  update_installer.rs  verification.rs
src/utils/: debouncer.rs  mod.rs
src/window/: browser_window.rs  builder.rs  manager.rs  mod.rs  session.rs
