[package]
name = "calm"
version = "0.1.0"
edition = "2021"
authors = ["saravenpi"]

[[bin]]
name = "calm"
path = "src/main.rs"

[dependencies]
wry = "0.47"
tao = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
url = "2.5"
urlencoding = "2.1"
global-hotkey = "0.6"
infer = "0.16"
base64 = "0.22"
reqwest = { version = "0.12", features = ["blocking"] }
content_disposition = "0.4"
