[package]
name = "calm"
version = "0.1.0"
edition = "2021"
authors = ["saravenpi"]

[[bin]]
name = "calm"
path = "src/main.rs"

[dependencies]
wry = { path = "libs/wry", features = ["devtools", "transparent"] }
tao = "0.30"
muda = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
url = "2.5"
urlencoding = "2.1"
infer = "0.16"
base64 = "0.22"
reqwest = { version = "0.12", features = ["blocking", "json"] }
content_disposition = "0.4"
dirs = "5.0"
chrono = "0.4"
tokio = { version = "1.0", features = ["rt", "macros"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.2", features = ["NSApplication"] }
objc2-foundation = { version = "0.2", features = ["NSThread"] }
